  (eggert at gnu dot org, Jani)
- Fixed bug #28451 (corupt EXIF headers have unlimited recursive IFD directory
  entries). (Andrei)
- Fixed bug #28444 (Cannot access undefined property for object with overloaded
  property access). (Dmitry)
- Fixed bug #28074 (FastCGI: stderr should be written in a FCGI stderr stream).
  (chris at ex-parrot dot com)

15 Dec 2004, PHP 5.0.3
- Added the %F modifier to *printf to render a non-locale-aware representation
  of a float with the . as decimal seperator. (Derick)
- Fixed error handling in mysqli_multi_query. (Georg)
- Extended the functionality of is_subclass_of() to accept either a class name
  or an object as first parameter. (Andrey) 
- Fixed potential problems with unserializing invalid serialize data. (Marcus)
- Fixed bug #31034 (Problem with non-existing iconv header file). (Derick)
- Fixed bug #30995 (snmp extension does not build with net-snmp 5.2). (Ilia)
- Fixed bug #30994 (SOAP server unable to handle request with references).
  (Dmitry)
- Fixed bug #30990 (allow popen() on *NIX to accept 'b' flag). (Ilia)
- Fixed bug #30967 (properties in extended mysqli classes don't work). (Georg)
- Fixed bug #30928 (When Using WSDL, SoapServer doesn't handle private or
  protected properties). (Dmitry)
- Fixed bug #30922 (reflective functions crash PHP when interfaces extend
  themselves). (Tony, Dmitry)
- Fixed bug #30904 (segfault when recording soapclient into session). (Tony,
  Dmitry)
- Fixed bug #30890 (MySQLi testsuite)
- Fixed bug #30856 (ReflectionClass::getStaticProperties segfaults). (Marcus)
- Fixed bug #30832 ("!" stripped off comments in xml parser). (Rob)
- Fixed bug #30799 (SoapServer doesn't handle private or protected properties).
  (Dmitry)
- Fixed bug #30783 (Apache crash when using ReflectionFunction::
  getStaticVariables()). (Marcus)
- Fixed bug #30750 (Meaningful error message when upload directory is not 
  accessible). (Ilia)
- Fixed bug #30685 (Malformed SOAPClient http header reequest). (Dmitry)