@@ -66,6 +66,7 @@ PHP                                                                        NEWS
   property access). (Dmitry)
 - Fixed bug #28074 (FastCGI: stderr should be written in a FCGI stderr stream).
   (chris at ex-parrot dot com)
+- Fixed bug #28041 (SOAP HTTP Digest Access Authentication). (Dmitry)
 
 15 Dec 2004, PHP 5.0.3
 - Added the %F modifier to *printf to render a non-locale-aware representation
